--- a/app/src/main/res/layout/layout_register.xml
+++ b/app/src/main/res/layout/layout_register.xml
@@ -10,34 +10,19 @@
         android:layout_width="wrap_content"
         android:layout_height="120dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/register"
+        android:text="@string/app_name"
         android:id="@+id/textView"
         android:gravity="center"
         android:layout_gravity="center_horizontal" />
 
-    <LinearLayout
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="@string/country_code"
-            android:id="@+id/textView_country_code" />
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="phone"
-            android:ems="10"
-            android:hint="@string/prompt_phone_number"
-            android:id="@+id/editText_phone_number" />
-
-    </LinearLayout>
+        android:ems="10"
+        android:gravity="center"
+        android:text="@string/register_using_phone"
+        android:id="@+id/textView_phone_number" />
 
     <AutoCompleteTextView
         android:id="@+id/email_address"
@@ -52,8 +37,8 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/done"
-        android:id="@+id/button_done"
+        android:text="@string/register"
+        android:id="@+id/button_register"
         android:layout_marginTop="24dp"
         android:layout_gravity="center_horizontal" />
 </LinearLayout>
