--- a/app/src/main/res/layout/layout_overview.xml
+++ b/app/src/main/res/layout/layout_overview.xml
@@ -3,7 +3,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="24dp">
 
     <LinearLayout
         android:orientation="horizontal"
@@ -11,10 +12,11 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/balance"
+            android:gravity="center"
             android:layout_gravity="center_horizontal" />
 
         <TextView
@@ -26,7 +28,6 @@
             android:layout_gravity="center_horizontal" />
 
     </LinearLayout>
-
 
     <ListView
         android:id="@+id/listView_friends"
