--- a/app/src/main/res/layout/item_list_friend.xml
+++ b/app/src/main/res/layout/item_list_friend.xml
@@ -3,19 +3,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="10dp">
 
-    <ImageButton
+    <ImageView
         android:layout_width="0dip"
         android:layout_weight="2"
         android:layout_height="wrap_content"
-        android:id="@+id/imageButton" />
+        android:id="@+id/imageView_picture" />
 
     <TextView
         android:layout_width="0dip"
-        android:layout_weight="8"
+        android:layout_weight="5"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Name"
-        android:id="@+id/textView" />
+        android:id="@+id/textView_name" />
+
+    <TextView
+        android:layout_width="0dip"
+        android:layout_weight="3"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="20"
+        android:id="@+id/textView_amount" />
 </LinearLayout>
