--- a/app/src/main/res/layout/layout_overview.xml
+++ b/app/src/main/res/layout/layout_overview.xml
@@ -20,7 +20,7 @@
             android:layout_gravity="center_horizontal" />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/sample_balance"
